Show both teams on "About us" with correct pictures, improve readability

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   font-family: 'Arcade';
   color:#F2EC4E;
+  text-shadow: 1px 1px 2px black;
   letter-spacing: 2px;
 }
 
@@ -37,6 +38,7 @@ input[type=submit] {
   font-family:Arcade; 
   padding: 20px 68px 20px 78px;
   color:#F2EC4E;
+  text-shadow: 1px 1px 2px black;
   font-size: 1.3em;
   background: #519AA0;
   border: none;
@@ -58,7 +60,8 @@ input[type=submit] {
 }
 
 a {
-  text-decoration: none; 
+  text-decoration: none;
+  text-shadow: none;
 }
 
 h1 {
